--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     margin-right: -2%;
 }
 .hve {
-    color: red;
+    color: yellow;
 }
 .header {
     background-color: 	#F08080;
@@ -163,16 +163,19 @@ input, .major-names, .add, .save, .search, .update, .deleteall, .cancel, .but-ch
 .form-student.active, .form-updatestudent.active {
     display: block;
 }
-td:nth-of-type(1), th:nth-of-type(1), td:nth-of-type(2), th:nth-of-type(2){
+td:nth-of-type(1), th:nth-of-type(1), td:nth-of-type(2), th:nth-of-type(2), td:nth-of-type(5), th:nth-of-type(5){
     text-align: center;
     width: 3px;
 }
+td:nth-of-type(13), th:nth-of-type(13) {
+    text-align: center;
+}
 
-td:nth-of-type(4), th:nth-of-type(4), td:nth-of-type(5), th:nth-of-type(5), td:nth-of-type(6), th:nth-of-type(6){
+td:nth-of-type(4), th:nth-of-type(4),td:nth-of-type(7), th:nth-of-type(7), td:nth-of-type(6), th:nth-of-type(6){
     text-align: center;
     width: 120px;
 }
-td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
+td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(10), th:nth-of-type(10){
     text-align: center;
     width: 90px;
 }
@@ -238,10 +241,13 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     #phone{
         width: 30%;
     }
+    #aclass{
+        width: 10%;
+    }
     #year{
         width: 15%;
     }
-    .vehicles{
+    .certificates{
         margin-left: 37%;
     }
     p{
@@ -341,7 +347,10 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     #yearu{
         width: 15%;
     }
-    .vehiclesu{
+    #aclassu{
+        width: 12%;
+    }
+    .certificatesu{
         margin-left: 37%;
     }
     .update{
@@ -357,7 +366,10 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
 }
   
   /* Responsive cho màn hình tầm trung (768px - 1024px) */
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1150px) {
+    td:nth-of-type(6), th:nth-of-type(6), td:nth-of-type(11), th:nth-of-type(11), td:nth-of-type(12), th:nth-of-type(12){
+        display: none;
+    }
     .btn-hidden {
         display: none;
       }
@@ -376,12 +388,13 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     div.form-student input[type="text"] {
         margin-bottom: 10px;
         padding: 5px;
+        height: 28px;
     }
     div.form-student {
         border-radius: 10px;
-        width: 60%;
-        margin-top: 1%;
-        margin-left: 20%;
+        width: 80%;
+        margin-top: -5%;
+        margin-left: 10%;
         padding-bottom: 1%;
         border: 1px solid #ccc;
     }
@@ -397,7 +410,10 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     #year{
         width: 10%;
     }
-    .vehicles{
+    #aclass{
+        width: 8%;
+    }
+    .certificates{
         margin-left: 27%;
     }
     p{
@@ -460,16 +476,17 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     div.form-updatestudent input[type="text"] {
         margin-bottom: 10px;
         padding: 5px;
+        height: 28px;
     }
     div.form-updatestudent {
         border-radius: 10px;
-        width: 60%;
-        margin-top: 1%;
-        margin-left: 20%;
+        width: 80%;
+        margin-top: -5%;
+        margin-left: 10%;
         padding-bottom: 1%;
         border: 1px solid #ccc;
     }
-    #fullnameu{
+    #fullnameu {
         width: 35%;
     }
     #codeu , #addressu{
@@ -481,7 +498,10 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     #yearu{
         width: 10%;
     }
-    .vehiclesu{
+    #aclassu{
+        width: 8%;
+    }
+    .certificatesu{
         margin-left: 27%;
     }
     p{
@@ -490,14 +510,14 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     .update{
         float: right;
         margin-right: 15%;
-    }
-    .cancel{
-        margin-left: 15%;
     }
 }
   
   /* Responsive cho màn hình lớn (trên 1024px) */
-@media (min-width: 1024px) {
+@media (min-width: 1150px) {
+    .col-xd-3{
+        width: 10%;
+    }
     .btn-hidden {
         display: none;
       }
@@ -516,12 +536,13 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     div.form-student input[type="text"] {
         margin-bottom: 10px;
         padding: 5px;
+        height: 30px;
     }
     div.form-student {
         border-radius: 10px;
-        width: 60%;
-        margin-top: 1%;
-        margin-left: 20%;
+        width: 50%;
+        margin-top: -5%;
+        margin-left: 25%;
         padding-bottom: 1%;
         border: 1px solid #ccc;
     }
@@ -531,13 +552,16 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     #code , #address{
         width: 20%;
     }
+    #aclass{
+        width: 7%;
+    }
     #phone{
         width: 18%;
     }
     #year{
         width: 10%;
     }
-    .vehicles{
+    .certificates{
         margin-left: 27%;
     }
     p{
@@ -600,20 +624,24 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     div.form-updatestudent input[type="text"] {
         margin-bottom: 10px;
         padding: 5px;
+        height: 30px;
     }
     div.form-updatestudent {
         border-radius: 10px;
-        width: 60%;
-        margin-top: 1%;
-        margin-left: 20%;
+        width: 50%;
+        margin-top: -5%;
+        margin-left: 25%;
         padding-bottom: 1%;
         border: 1px solid #ccc;
     }
-    #fullnameu{
+    #fullnameu {
         width: 35%;
     }
     #codeu , #addressu{
         width: 20%;
+    }
+    #aclassu{
+        width: 7%;
     }
     #phoneu{
         width: 18%;
@@ -621,7 +649,7 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     #yearu{
         width: 10%;
     }
-    .vehiclesu{
+    .certificatesu{
         margin-left: 27%;
     }
     p{
@@ -630,8 +658,5 @@ td:nth-of-type(9), th:nth-of-type(9), td:nth-of-type(8), th:nth-of-type(8){
     .update{
         float: right;
         margin-right: 15%;
-    }
-    .cancel{
-        margin-left: 15%;
     }
 }
