--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,21 @@ body {
     width: 15%;
 }
 .div-1 {
-    border-radius: 5px;
+    font-style: oblique;
+    border-radius: 4px;
     border: 1px solid #CD5C5C;
     height: 20%;
     margin-right: 10px;
+    width: 98%;
+    text-align: left;
+    color: black;
+    background-color: #FFA07A;
+    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out ;
+}  
+.div-1:hover {
+    color: white;
+    background-color: red;
+  
 }  
 .content {
     display: flex;
